# is25xp

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: lint.yml
examples/: rtic-cortex-m.rs
src/: commands.rs  flash_params.rs  lib.rs  status.rs  tests.rs
