[package]
name = "is25xp"
version = "0.1.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { git = "https://github.com/MathiasKoch/embedded-hal", branch = "feature/alternative-storage" }
stm32l4xx-hal = { version = "0.5.0", features = ["stm32l4x5", "rt"] }
nb = "1.0.0"

[patch.crates-io]
stm32l4xx-hal = { git = "https://github.com/MathiasKoch/stm32l4xx-hal", branch = "factbird-mini" }
