[package]
name = "is25xp"
version = "0.2.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-storage = "0.2.0"
embedded-hal = { version = "1.0.0-alpha.4" }
stm32l4xx-hal = { git = "https://github.com/BlackbirdHQ/stm32l4xx-hal", branch = "factbird-duo-1.3", features = [
    "stm32l4x5",
    "rt",
] }
nb = "1.0.0"

[dev-dependencies]
cortex-m = { version = "0.7.3"}
cortex-m-rtic = { version = "0.5.5"}
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
